[package]
name = "hotstuff"
description = "A composable, turnkey document compiler"
version = "0.1.9"
license = "MIT"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/AbstractMachinesLab/hotstuff"

[dependencies]
chrono = "0.4"
comrak = "0.8"
fern = { version = "0.6", features = [ "colored" ] }
http = "0.2"
hyper = "0.13"
log = "0.4"
mime = "0.3"
nipper = "0.1.8"
nom = "5.1"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "tcp", "rt-core" , "time"] }
